# linearization-uncertainty

./: .gitignore  LICENSE  README.md  evaluate.py  pyproject.toml  train.py
autograph/: ece.py  linearization.py  lr_schedulers.py  mol.py
autograph/data/: __init__.py  batch_converter.py  datasets.py  mol_dataset.py  sent_utils.pyx  sent_utils_wrapper.py  spectre_dataset.py  tokenizer.py
autograph/evaluation/: metrics.py  visualization.py
autograph/models/: seq_models.py
configs/: test.yaml  train.yaml
configs/datamodule/: planar.yaml  qm9.yaml
configs/experiment/: planar.yaml  qm9.yaml  test_planar.yaml  test_qm9.yaml
experiments/: .gitignore
scripts/analysis/: appendix_ece_analysis.py  compute_seq_lengths.py  eval_generated.py  eval_invariance.py  eval_utils.py  fig1_memorization_wall.py  figA1_diversity_saturation.py  figA2_A3_diversity_grid.py  figC_cross_eval_heatmaps.py  figI_subset_sweep.py  generate_molecules.py  run_aggregation.sh  table1_generation_quality.py  table2_permutation_consistency.py  tableC_cross_eval_matrix.py  tableI_subset_sweep.py  table_utils.py
tests/: test_calibration_ece.py  test_linearization.py
